# tierkreis

./: .dockerignore  .envrc  .gitignore  .pylintrc  CHANGELOG.md  CITATION.bib  Cargo.toml  Dockerfile  README.md  devenv.nix  dist-workspace.toml  factorial_hugr.json  fibonacci_hugr.json  generate_protos.py  justfile  mypy.ini  pyproject.toml  pyrightconfig.json  tkr_builtins.py  view_graph.py  view_protograph.py
core/: .gitignore  generate_protos.py  pyproject.toml  requirements.txt  setup.py
core/tests/: test_tierkreis_graph.py
core/tierkreis/core/: __init__.py  function.py  graph.py  graphviz.py  internal.py  python.py  tierkreis_graph.py  types.py  values.py
examples/example_workers/qsci_worker/: main.py  pyproject.toml  stubs.py
examples/mpi_worker/: CMakeLists.txt  README.md  main.cpp  mpi_graph.py  stubs.py
examples/mpi_worker/example/: example_def.json
frontend/: pylintrc  pyproject.toml  requirements.txt  setup.py  test_pyproto.py
frontend/tierkreis/frontend/: .gitignore  __init__.py  proto_graph_builder.py  requirements.txt  run_graph.py  runtime_client.py  values.py
integration/: README.md  pyproject.toml
integration/tests/: __init__.py  conftest.py  test_cli.py  test_scoping.py  test_server.py
integration/tests/managers/: docker_manager.py  local_manager.py
python/: .gitignore  README.md  pyproject.toml
python/examples/: sc22_example.py  variational-viz.ipynb  variational.ipynb  viz_demo.ipynb
python/examples/launchers/: circuit-from-ntchem  energy-from-distribution  nexus-worker  ntchem-worker  numerical-worker
python/examples/nexus-worker/: __main__.py  main.py  (+2 more)
python/numerical-worker/: main.py  pyproject.toml
python/pytket_worker/: .gitignore
python/tests/: conftest.py  sample_graph.py  test_builder.py  test_frontend.py  test_generics.py  test_pyruntime.py  test_serialization.py  test_type_check.py  test_variants.py  utils.py  vqe_graph.py
python/tierkreis/: builder.py  cli.py  exceptions.py  labels.py
pytket_worker/: .dockerignore  Dockerfile  pyproject.toml
pytket_worker/pytket_worker/: main.py
runtime/: mypy.ini  pyproject.toml  requirements.txt  setup.py
tests/worker_test/: main.py  pyproject.toml
tierkreis/: CHANGELOG.md  README.md  __init__.py  builder.py  cli.py  pyproject.toml  tierkreis.pyi
tierkreis-core/: Cargo.toml  README.md
tierkreis-core/src/: builtins.rs  graph.rs  lib.rs  namespace.rs  prelude.rs  symbol.rs
tierkreis-proto/: Cargo.toml  README.md  build.rs
tierkreis-proto/protos/: v1alpha1
tierkreis-proto/src/: graph.rs  lib.rs  messages.rs  protos_gen.rs  signature.rs  worker.rs
tierkreis-runtime/: Cargo.toml  README.md
tierkreis-runtime/src/: lib.rs  util.rs
tierkreis-server/: Cargo.toml  Dockerfile  README.md
tierkreis-server/src/: grpc.rs  main.rs  server.rs
tierkreis/_build/: generate_protos.py
tierkreis/client/: __init__.py  docker_manager.py  local_manager.py  myqos_client.py  runtime_client.py  server_client.py
tierkreis/common_types/: __init__.py  circuit.py
tierkreis/core/: __init__.py  common_types.py  function.py  graphviz.py  internal.py  opaque_model.py  pydantic.py  python.py  python_runtime.py  runtime_client.py  signature.py  tierkreis_graph.py  tierkreis_struct.py  type_errors.py  type_inference.py  types.py  utils.py  values.py
tierkreis/frontend/: __init__.py  builder.py  docker_manager.py  local_manager.py  myqos_client.py  python_builtin.py  python_runtime.py  runtime_client.py  type_inference.py
tierkreis/pyruntime/: __init__.py  python_builtin.py  python_runtime.py
tierkreis/runtime/: __init__.py  common_types.py
tierkreis/tests/: test_codegen.py  test_descendants.py  test_idl.py  test_labels.py  test_restart.py  tkr_builtins.py
tierkreis/tierkreis/: __init__.py  aer_worker.py  builder.py  codegen.py  config.py  consts.py  exceptions.py  executor.py  hpc.py  ibmq_worker.py  models.py  namespace.py  nexus_worker.py  paths.py  pytket_simulators_worker.py  pytket_worker.py  quantinuum_worker.py  qulacs_worker.py  storage.py  types.py  utils.py  value.py  worker.py
tierkreis/worker/: __init__.py  callback.py  common_types.py  exceptions.py  namespace.py  prelude.py  tracing.py  worker.py
tierkreis_core/: Cargo.toml  pyproject.toml
tierkreis_core/src/: lib.rs
tierkreis_visualization/: .gitignore  Dockerfile  README.md  justfile  openapi.json  package.json  pyproject.toml
tierkreis_visualization/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
tierkreis_visualization/src/: collide.js  flow.tsx  frontend.tsx  index.css  index.html  index.tsx  initial_nodes.js
tierkreis_visualization/static/: _types.js  eventstream.js  index.css  index.json  models.js  network.js  tokens.css  tokens.js  utils.js  vis-network.min.js  workflows.html.css
tierkreis_visualization/templates/: eval.html  eval.jinja  fallback.html  index.html  loop.html  loop.jinja  map.jinja  unavailable.jinja  workflows.html
tierkreis_visualization/tierkreis_visualization/: app.py  app_config.py  cli.py  config.py  main.py  openapi.json  openapi.py  storage.py  visualize_graph.py
tierkreis_workers/: README.md  pyproject.toml
tierkreis_workers/aer_worker/: Dockerfile  README.md  main.py  pyproject.toml  stubs.py
tierkreis_workers/ibmq_worker/: README.md  default_pass.py  main.py  pyproject.toml  stubs.py
tierkreis_workers/mpi_worker/: generate_stubs.py
tierkreis_workers/nexus_worker/: .env.example  README.md  main.py  pyproject.toml  stubs.py
tierkreis_workers/pytket_simulators_worker/: main.py  pyproject.toml
tierkreis_workers/pytket_worker/: Dockerfile  README.md  _main.py  backend.py  compile_circuit.py  default_pass.py  main.py  pyproject.toml  stubs.py  test_main.py
tierkreis_workers/quantinuum_worker/: README.md  default_pass_quantinuum.py  main.py  pyproject.toml  stubs.py
tierkreis_workers/qulacs_worker/: main.py  pyproject.toml  stubs.py
tierkreis_workers/tierkreis_workers/: __init__.py
type_check/: Cargo.toml  README.md  pyproject.toml  tierkreis_typecheck.pyi
type_check/src/: lib.rs
(+571 files in other folders)
