# This file controls Maturin's building of the Rust parts that go into the python package
[package]
# This is the name of the package (e.g. on pypi), wheel/sdist file, etc.
# However it is overridden by the project name in pyproject.toml.
name = "tierkreis"
version = "0.0.0" # Also overridden by pyproject.toml.
authors = ["Alan Lawrence <alan.lawrence@cambridgequantum.com>"]
edition = "2018"
include = ["src/**/*", "tierkreis/**/*", "local_build_backend/**/*", "pyproject.toml"]

[lib]
# This is the name of the python module that users import.
# For a mixed Rust/python module, the Rust stubs will in fact be in tierkreis.tierkreis,
# but this must still be the name of the python source folder (i.e. outermost module) too.
name = "tierkreis"
# crate-type = ["cdylib", "rlib"] # to allow use by downstream Rust code ("including code in bin/ examples/ and test/" ?!)
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.16.5"
tierkreis-core = { path = "../tierkreis-core" }
tierkreis-proto = { path = "../tierkreis-proto" }
prost = "0.8.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
