
[workspace]
resolver = "2"

members = [
  "tierkreis-core",
  "tierkreis-proto",
  "tierkreis-runtime",
  "tierkreis-server",
  "type_check",
]
[workspace.package]
rust-version = "1.75"
edition = "2021"
homepage = "https://github.com/CQCL/tierkreis"
repository = "https://github.com/CQCL/tierkreis"
license = "Apache-2.0"

[workspace.dependencies]
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
tonic = { version = "0.12.0", features = ["transport"] }
tonic-build = "0.12.0"
tonic-health = "0.12.0"
hyper = "1.5.0"
tower = "0.5.1"
tracing-opentelemetry = "0.27.0"
opentelemetry = "0.26.0"
opentelemetry-http = "0.26.0"
opentelemetry-otlp = "0.26.0"
opentelemetry_sdk = "0.26.0"
futures = "0.3.31"
futures-core = { version = "0.3.31", default-features = false }

tracing = "0.1.4"
tracing-subscriber = "0.3.18"
http = "1.1.0"
serde = "1.0.197"
rstest = "0.21.0"

[workspace.lints.rust]
missing_docs = "warn"
