[project]
name = "tierkreis"
description = "Python client and utilities for tierkreis."
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com"},
    {name = "Lukas Heidemann", email = "lukas.heidemann@quantinuum.com"},
    {name = "John Children", email = "john.children@quantinuum.com"},
    {name = "Alan Lawrence", email = "alan.lawrence@quantinuum.com"}
]

requires-python = ">=3.9,<3.12"
dependencies = [
    "betterproto[compiler]==2.0.0b5",
    "protobuf>=3.19,<4",  # Restrict version to maintain compatibility with opentelemetry
    "grpclib>=0.4.3rc,<0.5", # pre-release to support python 3.10
    "networkx>=2.6.3,<3",
    "graphviz>=0.18,<0.19",
    "keyring==23.2",
    "keyrings.alt==4.1",
    "click>=8.0.3,<9",
    "yachalk>=0.1.4,<0.2",
]

[project.scripts]
tkrs = 'tierkreis.cli:cli'

[project.optional-dependencies]
docker = [ "docker>=5,<6"]

telemetry = [
    "opentelemetry-sdk>=1.5.0,<2",
    "opentelemetry-exporter-otlp>=1.5.0,<2",
]

commontypes = [
    "pytket>=1.0"
]
lint = [
    "black>=22.1,<23",
    "mypy>=0.981,<0.982",
    "pylint~=2.13,!=2.13.6",
    "isort~=5.10",
    "types-setuptools>=57.4.2,<58",
    "types-python-dateutil>=2.8.2,<3",
    "tierkreis[sc22-example,telemetry,docker]"
]
test = [
    "pytest>=6.2,<7",
    "pytest-asyncio>=0.16,<0.17",
]
sc22-example = [
    "numpy>=1.20,<2",
    "pytket>=1.0"
]

typecheck = ["tierkreis_typecheck"]


[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
markers = [ "pytket" ]

[tool.mypy]
exclude = [
    '^build/',
    'pytket_worker/'
]
warn_unused_ignores = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tierkreis.core.protos.*"
ignore_errors = true

[tool.pylint.messages_control]
recursive="yes"
ignore-paths='^tierkreis/core/protos/.*$'
max-line-length=88
output-format="colorized"
score="no"
reports="no"
disable="all"
enable=[
    "anomalous-backslash-in-string",
    "assert-on-tuple",
    "bad-indentation",
    "bad-option-value",
    "bad-reversed-sequence",
    "bad-super-call",
    "consider-merging-isinstance",
    "continue-in-finally",
    "dangerous-default-value",
    "duplicate-argument-name",
    "expression-not-assigned",
    "function-redefined",
    "inconsistent-mro",
    "init-is-generator",
    "line-too-long",
    "lost-exception",
    "missing-kwoa",
    "mixed-line-endings",
    "not-callable",
    "no-value-for-parameter",
    "nonexistent-operator",
    "not-in-loop",
    "pointless-statement",
    "redefined-builtin",
    "return-arg-in-generator",
    "return-in-init",
    "return-outside-function",
    "simplifiable-if-statement",
    "syntax-error",
    "too-many-function-args",
    "trailing-whitespace",
    "undefined-variable",
    "unexpected-keyword-arg",
    "unhashable-dict-key",
    "unnecessary-pass",
    "unreachable",
    "unrecognized-inline-option",
    "unused-import",
    "unnecessary-semicolon",
    "unused-variable",
    "unused-wildcard-import",
    "wildcard-import",
    "wrong-import-order",
    "wrong-import-position",
    "yield-outside-function"
]
# Ignore long lines containing URLs or pylint or mypy directives.
ignore-long-lines='(#\w*pylint: disable.*|# type: ignore.*|https?://\S+>?)$'


[build-system]
requires = [
    "setuptools>=65.5.0",
    "betterproto[compiler]==2.0.0b5",
]
build-backend = "generate_protos"
backend-path = ["tierkreis/_build"]

[tool.setuptools.dynamic]
version = { attr = "tierkreis._version.__version__" }

[tool.setuptools.packages.find]
include = ["tierkreis*"]
