[tool.poetry]
name = "tierkreis.frontend"
version = "0.1.0"
description = "Client that can connect with a tierkreis server."
authors = [
    "Seyon Sivarajah <seyon.sivarajah@cambridgequantum.com>",
    "Lukas Heidemann <lukas.heidemann@cambridgequantum.com>",
    "John Children <john.children@cambridgequantum.com>",
]
packages = [{ include="tierkreis" }]

[tool.poetry.dependencies]
python = "^3.8"
"tierkreis.core" = { path="../core/", develop=true }
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
pytest = "^6.2.4"
pylint = "^2.8.3"
# runtime is used to run server in same environment for tests
"tierkreis.runtime" = { path="../runtime/", develop=true }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
