[project]
name = "integration-tests"
version = "0.1.0"
description = "Tierkries integration tests."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = ["tierkreis"]

[tool.ruff]
target-version = "py310"
# default + imports
lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = ["."]
exclude = ["./venv"]
extraPaths = ["../python"]

[tool.uv.sources]
tierkreis = { workspace = true }
