[project]
name = "tierkreis"
description = "Python client and utilities for tierkreis."
readme = "README.md"
version = "0.7.8"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "Lukas Heidemann", email = "lukas.heidemann@quantinuum.com" },
    { name = "John Children", email = "john.children@quantinuum.com" },
    { name = "Alan Lawrence", email = "alan.lawrence@quantinuum.com" },
]

requires-python = ">=3.10,<3.13"
dependencies = [
    "networkx>=2.6.3,<4",
    "graphviz>=0.20,<0.21",
    "click>=8.1.3,<9",
    "yachalk>=0.1.4,<0.2",
    "requests>=2.31,<3",
    "pydantic~=2.5",
]

[project.scripts]
tkrs = 'tierkreis.cli:cli'

[project.optional-dependencies]
commontypes = ["pytket>=1.0"]
typecheck = ["tierkreis-typecheck"]

[dependency-groups]
dev = ["pytest"]
build = ["build[uv]"]

[tool.pytest.ini_options]
markers = ["pytket"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py312"
extend-exclude = []

[tool.pyright]
include = ["."]
exclude = []
ignore = []
