[tool.poetry]
name = "pytket_worker"
version = "0.1.0"
description = "Test python worker."
authors = [
    "Seyon Sivarajah <seyon.sivarajah@cambridgequantum.com>",
    "Lukas Heidemann <lukas.heidemann@cambridgequantum.com>",
    "John Children <john.children@cambridgequantum.com>",
]
packages = [{ include = "pytket_worker" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tierkreis = { path = "..", develop = true }

pytket-qiskit = "^0.24.0"
cryptography = "3.4.7"    # 3.4.8 causes issues so pinning

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
mypy = "^0.910"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
