[tool.poetry]
name = "pytket_worker"
version = "0.1.0"
description = "Test python worker."
authors = [
    "Seyon Sivarajah <seyon.sivarajah@cambridgequantum.com>",
    "Lukas Heidemann <lukas.heidemann@cambridgequantum.com>",
    "John Children <john.children@cambridgequantum.com>",
]
packages = [{ include = "pytket_worker" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tierkreis = { path = "..", develop = true }
pytket-qiskit = "^0.46.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
