[tool.poetry]
name = "tierkreis.runtime"
version = "0.1.0"
description = "Library for building tierkreis workers."
authors = [
    "Seyon Sivarajah <seyon.sivarajah@cambridgequantum.com>",
    "Lukas Heidemann <lukas.heidemann@cambridgequantum.com>",
    "John Children <john.children@cambridgequantum.com>",
]
packages = [{ include="tierkreis" }]

[tool.poetry.dependencies]
python = "^3.8"
# "qermit" = { path/../../qermit/", develop=true }
"tierkreis.core" = { path="../core/", develop=true }
pytket-qiskit = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
pylint = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
