[package]
name = "tierkreis-core"
description = "Core implementation for the tierkreis quantum-classical hybrid workflow orchestration tool."
version = "0.1.0"
authors = [
    "Seyon Sivarajah <seyon.sivarajah@quantinuum.com>",
    "Lukas Heidemann <lukas.heidemann@quantinuum.com>",
    "John Children <john.children@quantinuum.com>",
    "Alan Lawrence <alan.lawrence@quantinuum.com>",
]
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indenter = "0.3.3"
indexmap = "1.7.0"
itertools = "0.10.5"
lasso = { version = "0.5.1", features = ["multi-threaded"] }
once_cell = "1.8.0"
regex = "1.6.0"
thiserror = "1.0.28"
uuid = "1.2.1"


[dev-dependencies]
rstest.workspace = true
single = "0.1.0"

[lints]
workspace = true
