[package]
name = "tierkreis-runtime"
description = "Runtime implementation for the tierkreis quantum-classical hybrid workflow orchestration tool."
version = "0.1.0"
authors = [
    "Seyon Sivarajah <seyon.sivarajah@quantinuum.com>",
    "Lukas Heidemann <lukas.heidemann@quantinuum.com>",
    "John Children <john.children@quantinuum.com>",
    "Alan Lawrence <alan.lawrence@quantinuum.com>",
]
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
tierkreis-core = { path = "../tierkreis-core", version = "0.1.0" }
tierkreis-proto = { path = "../tierkreis-proto", version = "0.1.0" }
tracing = { workspace = true, features = ["std"] }
thiserror = "1.0.28"
anyhow = "1.0.43"
tokio = { version = "1.10.1", features = ["process", "io-util", "sync"] }
tokio-stream = { version = "0.1.7", features = ["io-util"] }
tonic = { workspace = true }
tower = { workspace = true, features = [
    "balance",
    "discover",
    "limit",
    "reconnect",
] }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace", "rt-tokio"] }
serde = { workspace = true, optional = true }
hyper-util = "0.1.10"

[dev-dependencies]
rstest.workspace = true
test-env-log = { version = "0.2.7", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { workspace = true, features = [
    "chrono",
    "env-filter",
    "fmt",
] }

[features]
config = ["dep:serde"]

[lints]
workspace = true
