[package]
name = "tierkreis_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tierkreis_core"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
indexmap = { version = "2.9.0", features = ["serde"] }
pyo3 = { version = "0.25.0", features = ["indexmap", "abi3-py310"] }
pythonize = "0.25.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
