[project]
name = "tiekreis_visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.8.1",
    "tierkreis",
    "watchfiles>=1.0.4",
]

[tool.uv.sources]
tierkreis = { workspace = true }
