[project]
name = "tierkreis_visualization"
version = "0.1.4"
description = "Browser based visualization tool for tierkreis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.8.1",
    "tierkreis",
    "watchfiles>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"./tierkreis_visualization/static/dist" = "tierkreis_visualization/static/dist"

[tool.uv.sources]
tierkreis = { workspace = true }

[project.scripts]
tkr-vis = "tierkreis_visualization.main:start"

