# This file controls Maturin's building of the Rust parts that go into the python package
[package]
# This is the name of the package (e.g. on pypi), wheel/sdist file, etc.
# However it is overridden by the project name in pyproject.toml.
name = "tierkreis-typecheck"
version = "0.0.0"                                          # Also overridden by pyproject.toml.
authors = ["Alan Lawrence <alan.lawrence@quantinuum.com>"]
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

include = ["src/**/*", "pyproject.toml"]

[lib]
# This is the name of the python module that users import.
# For a mixed Rust/python module, the Rust stubs will in fact be in tierkreis.tierkreis,
# but this must still be the name of the python source folder (i.e. outermost module) too.
name = "tierkreis_typecheck"
# crate-type = ["cdylib", "rlib"] # to allow use by downstream Rust code ("including code in bin/ examples/ and test/" ?!)
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.16.5"
tierkreis-core = { path = "../tierkreis-core", version = "0.1.0" }
tierkreis-proto = { path = "../tierkreis-proto", version = "0.1.0" }
prost = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lints]
workspace = true
