[project]
name = "tierkreis-typecheck"
description = "Type checking extension."
version = "0.2.0"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
    { name = "Lukas Heidemann", email = "lukas.heidemann@quantinuum.com" },
    { name = "John Children", email = "john.children@quantinuum.com" },
    { name = "Alan Lawrence", email = "alan.lawrence@quantinuum.com" },
]

requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CQCL/tierkreis"

[build-system]
requires = ["maturin~=1.4"]
build-backend = "maturin"
