[tool.poetry]
name = "worker_test"
version = "0.1.0"
description = "Test python worker."
authors = [
    "Seyon Sivarajah <seyon.sivarajah@cambridgequantum.com>",
    "Lukas Heidemann <lukas.heidemann@cambridgequantum.com>",
    "John Children <john.children@cambridgequantum.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tierkreis = { path = "../../", develop = true, extras = [
    "runtime",
    "frontend",
] }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
