[project]
name = "tkr_aer_worker"
version = "0.1.0"
description = "A tierkreis worker for Aer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "pytket-qiskit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }

[project.scripts]
tkr_aer_worker = "main:main"
