[project]
name = "tkr_ibmq_worker"
version = "0.1.0"
description = "A tierkreis worker for compilation of ibmq backends."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "pytket",
    "pytket-qiskit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }
pytket-qiskit = { git = "https://github.com/CQCL/pytket-qiskit" }

[project.scripts]
tkr_ibmq_worker = "main:main"
