[project]
name = "nexus_worker"
version = "0.1.0"
description = "A worker for interacting with Nexus."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "qnexus",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }

[project.scripts]
tkr_nexus_worker = "main:main"
