[project]
name = "tkr_nexus_worker"
version = "0.1.4"
description = "A tierkreis worker for interacting with Nexus."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "qnexus==0.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }

[project.scripts]
tkr_nexus_worker = "main:main"
