[project]
name = "tkr_pytket_worker"
version = "0.1.4"
description = "A tierkreis worker for pytket."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "pytket",
    "qnexus",
    "pytket-qiskit",
    "pytket-quantinuum",
]

[project.optional-dependencies]
#Some wheels for pyqir are restricted in their arch
qir = [
    "pytket-quantinuum",
    "pytket-qir",
    "pytket-qirpass",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }
pytket-qiskit = { git = "https://github.com/CQCL/pytket-qiskit", branch = "main" }
pytket-quantinuum = { git = "https://github.com/CQCL/pytket-quantinuum", branch = "main" }

[project.scripts]
tkr_pytket_worker = "main:main"
