[project]
name = "tkr_pytket_worker"
version = "0.1.4"
description = "A tierkreis worker for pytket."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "pytket",
    "qnexus",
    "pytket-qiskit",
]

[project.optional-dependencies]
#Some wheels for pyqir are restricted in their arch
qir = [
    "pytket-qir",
    "pytket-qirpass",
    "pytket-quantinuum",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }
pytket-qiskit = { git = "https://github.com/CQCL/pytket-qiskit" }
pytket-quantinuum = { git = "https://github.com/CQCL/pytket-quantinuum" }

[project.scripts]
tkr_pytket_worker = "main:main"
