[project]
name = "tkr_pytket_worker"
version = "0.1.5"
description = "A tierkreis worker for pytket."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tierkreis",
    "pytket",
    "qnexus",
]

[project.optional-dependencies]
backends = [
    "pytket-qiskit",
    "pytket-quantinuum",
    "pytket_qirpass",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }
pytket-qiskist = { git = "https://github.com/CQCL/pytket-qiskit" }
pytket-quantinuum = { git = "https://github.com/CQCL/pytket-quantinuum" }

[project.scripts]
tkr_pytket_worker = "main:main"
