[project]
name = "tkr_qulacs_worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytket-qulacs>=0.41.0",
    "tierkreis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[tool.uv.sources]
tierkreis = { workspace = true }

[project.scripts]
tkr_aer_worker = "main:main"